--- a/src/style/app.scss
+++ b/src/style/app.scss
@@ -9,10 +9,6 @@
 @import 'elements/person-card';
 @import 'elements/slider-range-list';
 @import 'elements/slider-range-single-list';
-//@import 'elements/breadcrumbs';
-//@import 'elements/pagination';
-//@import 'elements/popup';
-//@import 'elements/slickBase';
 
 //section
 @import 'sections/header';
@@ -34,4 +30,4 @@
 @import 'pages/delete-profile';
 @import 'pages/subscription';
 @import 'pages/requests';
-@import 'pages/request';
+@import 'pages/request-person';
