--- a/src/pug/pages/edit-profile-business.pug
+++ b/src/pug/pages/edit-profile-business.pug
@@ -106,7 +106,7 @@ block content
                 .form-group__icon
                   svg.svg-phone
                     use(xlink:href="assets/img/sprite.svg#phone")
-                input.form-control(type='phone' placeholder='Phone')
+                input.form-control(type='text' placeholder='Phone')
               //end form-group
 
             //end sign-up-lg-form__left
