--- a/src/pug/pages/sign-up-lg-2.pug
+++ b/src/pug/pages/sign-up-lg-2.pug
@@ -74,7 +74,7 @@ block content
                 .form-group__icon
                   svg.svg-phone
                     use(xlink:href="assets/img/sprite.svg#phone")
-                input.form-control(type='phone' placeholder='Phone')
+                input.form-control(type='text' placeholder='Phone')
               //end form-group
 
               //begin form-group
