--- a/src/pug/pages/edit-profile-person.pug
+++ b/src/pug/pages/edit-profile-person.pug
@@ -98,7 +98,7 @@ block content
                 .form-group__icon
                   svg.svg-phone
                     use(xlink:href="assets/img/sprite.svg#phone")
-                input.form-control(type='phone' placeholder='Phone')
+                input.form-control(type='text' placeholder='Phone')
               //end form-group
 
               //begin form-group
@@ -106,7 +106,7 @@ block content
                 .form-group__icon
                   svg.svg-hat
                     use(xlink:href="assets/img/sprite.svg#hat")
-                input.form-control(type='phone' placeholder='What School You Attend')
+                input.form-control(type='text' placeholder='What School You Attend')
               //end form-group
 
               //begin form-group
@@ -114,7 +114,7 @@ block content
                 .form-group__icon
                   svg.svg-calendar
                     use(xlink:href="assets/img/sprite.svg#calendar")
-                input.form-control(type='phone' placeholder='Date of Graduation')
+                input.form-control(type='text' placeholder='Date of Graduation')
               //end form-group
 
               //begin form-group
@@ -122,7 +122,7 @@ block content
                 .form-group__icon
                   svg.svg-clock
                     use(xlink:href="assets/img/sprite.svg#clock")
-                input.form-control(type='phone' placeholder='Experience')
+                input.form-control(type='text' placeholder='Experience')
               //end form-group
 
               //begin form-group
@@ -130,7 +130,7 @@ block content
                 .form-group__icon
                   svg.svg-car
                     use(xlink:href="assets/img/sprite.svg#car")
-                input.form-control(type='phone' placeholder='Miles Available to Commute')
+                input.form-control(type='text' placeholder='Miles Available to Commute')
               //end form-group
 
               //begin form-group
@@ -138,7 +138,7 @@ block content
                 .form-group__icon
                   svg.svg-shield
                     use(xlink:href="assets/img/sprite.svg#shield")
-                input.form-control(type='phone' placeholder='License Number')
+                input.form-control(type='text' placeholder='License Number')
               //end form-group
             //end sign-up-lg-form__left
 
