add footer menu

--- a/src/pug/pages/change-password.pug
+++ b/src/pug/pages/change-password.pug
@@ -45,5 +45,6 @@ block content
           //end log-in-form__body
     //end content
 
+    include ../elements/footer-menu
     include ../sections/footer
     include ../sections/scripts
