--- a/src/pug/pages/edit-profile-person.pug
+++ b/src/pug/pages/edit-profile-person.pug
@@ -178,5 +178,6 @@ block content
         //end sign-up-lg-form
     //end content
 
+    include ../elements/footer-menu
     include ../sections/footer
     include ../sections/scripts
