--- a/src/pug/pages/request-person-1.pug
+++ b/src/pug/pages/request-person-1.pug
@@ -116,5 +116,6 @@ block content
 
     //end content
 
+    include ../elements/footer-menu
     include ../sections/footer
     include ../sections/scripts
