--- a/src/pug/pages/requests-business.pug
+++ b/src/pug/pages/requests-business.pug
@@ -29,5 +29,6 @@ block content
           include ../elements/person-card-12
     //end content
 
+    include ../elements/footer-menu
     include ../sections/footer
     include ../sections/scripts
