--- a/src/pug/pages/search-results.pug
+++ b/src/pug/pages/search-results.pug
@@ -18,6 +18,6 @@ block content
       .container.container-inn.container-inn--sm
         include ../elements/person-card-02
     //end content
-
+    include ../elements/footer-menu
     include ../sections/footer
     include ../sections/scripts
