--- a/src/style/app.scss
+++ b/src/style/app.scss
@@ -9,6 +9,7 @@
 @import 'elements/person-card';
 @import 'elements/slider-range-list';
 @import 'elements/slider-range-single-list';
+@import 'elements/footer-menu';
 
 //section
 @import 'sections/header';
