--- a/src/pug/pages/change-subscription-2.pug
+++ b/src/pug/pages/change-subscription-2.pug
@@ -103,5 +103,6 @@ block content
         //end sign-up-lg-form
     //end content
 
+    include ../elements/footer-menu
     include ../sections/footer
     include ../sections/scripts
