--- a/src/pug/pages/change-subscription.pug
+++ b/src/pug/pages/change-subscription.pug
@@ -132,5 +132,6 @@ block content
         //end sign-up-lg-form
     //end content
 
+    include ../elements/footer-menu
     include ../sections/footer
     include ../sections/scripts
