--- a/src/pug/pages/delete-profile.pug
+++ b/src/pug/pages/delete-profile.pug
@@ -33,5 +33,6 @@ block content
           //end log-in-form__body
     //end content
 
+    include ../elements/footer-menu
     include ../sections/footer
     include ../sections/scripts
