--- a/src/pug/pages/edit-profile-business.pug
+++ b/src/pug/pages/edit-profile-business.pug
@@ -138,5 +138,6 @@ block content
         //end sign-up-lg-form
     //end content
 
+    include ../elements/footer-menu
     include ../sections/footer
     include ../sections/scripts
