--- a/src/pug/pages/profile-clinic.pug
+++ b/src/pug/pages/profile-clinic.pug
@@ -61,5 +61,6 @@ block content
 
     //end content
 
+    include ../elements/footer-menu
     include ../sections/footer
     include ../sections/scripts
