--- a/src/pug/pages/request-clinic-1.pug
+++ b/src/pug/pages/request-clinic-1.pug
@@ -61,6 +61,7 @@ block content
 
     //end content
 
+    include ../elements/footer-menu
     include ../sections/footer
     include ../sections/scripts
     script.
