--- a/src/pug/pages/request-clinic-3.pug
+++ b/src/pug/pages/request-clinic-3.pug
@@ -67,6 +67,7 @@ block content
 
     //end content
 
+    include ../elements/footer-menu
     include ../sections/footer
     include ../sections/scripts
     script.
