--- a/src/pug/pages/request-clinic-4.pug
+++ b/src/pug/pages/request-clinic-4.pug
@@ -66,6 +66,7 @@ block content
 
     //end content
 
+    include ../elements/footer-menu
     include ../sections/footer
     include ../sections/scripts
     script.
