--- a/src/pug/pages/request-person-3.pug
+++ b/src/pug/pages/request-person-3.pug
@@ -122,5 +122,6 @@ block content
 
     //end content
 
+    include ../elements/footer-menu
     include ../sections/footer
     include ../sections/scripts
