--- a/src/pug/pages/request-person-4.pug
+++ b/src/pug/pages/request-person-4.pug
@@ -150,5 +150,6 @@ block content
 
     //end content
 
+    include ../elements/footer-menu
     include ../sections/footer
     include ../sections/scripts
