--- a/src/pug/pages/request-person-5.pug
+++ b/src/pug/pages/request-person-5.pug
@@ -147,5 +147,6 @@ block content
 
     //end content
 
+    include ../elements/footer-menu
     include ../sections/footer
     include ../sections/scripts
