--- a/src/pug/pages/request-person-6.pug
+++ b/src/pug/pages/request-person-6.pug
@@ -185,5 +185,6 @@ block content
 
     //end content
 
+    include ../elements/footer-menu
     include ../sections/footer
     include ../sections/scripts
