--- a/src/pug/pages/requests-person.pug
+++ b/src/pug/pages/requests-person.pug
@@ -29,5 +29,6 @@ block content
           include ../elements/person-card-07
     //end content
 
+    include ../elements/footer-menu
     include ../sections/footer
     include ../sections/scripts
