--- a/src/pug/pages/search-contractor-2.pug
+++ b/src/pug/pages/search-contractor-2.pug
@@ -75,5 +75,6 @@ block content
           //end log-in-form__body
     //end content
 
+    include ../elements/footer-menu
     include ../sections/footer
     include ../sections/scripts
