--- a/src/pug/pages/search-contractor.pug
+++ b/src/pug/pages/search-contractor.pug
@@ -63,5 +63,6 @@ block content
           //end log-in-form__body
     //end content
 
+    include ../elements/footer-menu
     include ../sections/footer
     include ../sections/scripts
