--- a/src/style/sections/_page-header.scss
+++ b/src/style/sections/_page-header.scss
@@ -168,10 +168,12 @@
   right: 0;
   bottom: 0;
   left: 0;
-  width: 22px;
+  display: flex;
+  justify-content: flex-end;
+  width: 50px;
   height: 42px;
   margin: auto;
-  transform: translateX(466px);
+  transform: translateX(460px);
 
   @include max(980) {
     right: 16px;
@@ -193,6 +195,7 @@
   padding: 14px 8px;
   cursor: pointer;
   border: none;
+  outline: none !important;
   background-color: #fff;
   svg {
     fill: #9d9d9d;
