--- a/src/pug/pages/profile-person.pug
+++ b/src/pug/pages/profile-person.pug
@@ -170,6 +170,5 @@ block content
 
     //end content
 
-    include ../elements/footer-menu
-    include ../sections/footer
+    include ../sections/footer-lg
     include ../sections/scripts
