--- a/src/style/app.scss
+++ b/src/style/app.scss
@@ -9,7 +9,6 @@
 @import 'elements/person-card';
 @import 'elements/slider-range-list';
 @import 'elements/slider-range-single-list';
-@import 'elements/footer-menu';
 
 //section
 @import 'sections/header';
@@ -32,3 +31,4 @@
 @import 'pages/subscription';
 @import 'pages/requests';
 @import 'pages/request-person';
+@import 'pages/404';
