--- a/src/style/sections/_page-header.scss
+++ b/src/style/sections/_page-header.scss
@@ -180,7 +180,8 @@
     left: auto;
     transform: translateX(0);
   }
-  &:hover {
+  &.active {
+    //&:hover {
     .page-header-menu__list {
       pointer-events: auto;
       opacity: 1;
