--- a/src/pug/pages/delete-profile.pug
+++ b/src/pug/pages/delete-profile.pug
@@ -33,6 +33,5 @@ block content
           //end log-in-form__body
     //end content
 
-    include ../elements/footer-menu
-    include ../sections/footer
+    include ../sections/footer-lg
     include ../sections/scripts
