--- a/src/pug/pages/edit-profile-person.pug
+++ b/src/pug/pages/edit-profile-person.pug
@@ -178,6 +178,5 @@ block content
         //end sign-up-lg-form
     //end content
 
-    include ../elements/footer-menu
-    include ../sections/footer
+    include ../sections/footer-lg
     include ../sections/scripts
