--- a/src/pug/pages/request-clinic-2.pug
+++ b/src/pug/pages/request-clinic-2.pug
@@ -61,8 +61,7 @@ block content
 
     //end content
 
-    include ../elements/footer-menu
-    include ../sections/footer
+    include ../sections/footer-lg
     include ../sections/scripts
     script.
       function initMap() {
