--- a/src/pug/pages/request-person-1.pug
+++ b/src/pug/pages/request-person-1.pug
@@ -116,6 +116,5 @@ block content
 
     //end content
 
-    include ../elements/footer-menu
-    include ../sections/footer
+    include ../sections/footer-lg
     include ../sections/scripts
