--- a/src/pug/pages/request-person-5.pug
+++ b/src/pug/pages/request-person-5.pug
@@ -147,6 +147,5 @@ block content
 
     //end content
 
-    include ../elements/footer-menu
-    include ../sections/footer
+    include ../sections/footer-lg
     include ../sections/scripts
