--- a/src/pug/pages/request-person-6.pug
+++ b/src/pug/pages/request-person-6.pug
@@ -185,6 +185,5 @@ block content
 
     //end content
 
-    include ../elements/footer-menu
-    include ../sections/footer
+    include ../sections/footer-lg
     include ../sections/scripts
