--- a/src/pug/pages/requests-business.pug
+++ b/src/pug/pages/requests-business.pug
@@ -29,6 +29,5 @@ block content
           include ../elements/person-card-12
     //end content
 
-    include ../elements/footer-menu
-    include ../sections/footer
+    include ../sections/footer-lg
     include ../sections/scripts
