--- a/src/pug/pages/search-contractor.pug
+++ b/src/pug/pages/search-contractor.pug
@@ -63,6 +63,5 @@ block content
           //end log-in-form__body
     //end content
 
-    include ../elements/footer-menu
-    include ../sections/footer
+    include ../sections/footer-lg
     include ../sections/scripts
