did new selectbox list

--- a/src/style/app.scss
+++ b/src/style/app.scss
@@ -8,6 +8,7 @@
 //elements
 @import 'elements/person-card';
 @import 'elements/slider-range-list';
+@import 'elements/selectbox-list';
 @import 'elements/slider-range-single-list';
 
 //section
