edit profile schedule

--- a/src/pug/pages/profile-person.pug
+++ b/src/pug/pages/profile-person.pug
@@ -129,13 +129,22 @@ block content
             .profile-person__schedule
               .profile-person__schedule-row
                 span Monday
-                span 09:30 - 13:30
+                span 09:30 AM - 10:30 PM
               .profile-person__schedule-row
                 span Tuesday
-                span 09:30 - 13:30
+                span 09:30 AM - 10:30 PM
               .profile-person__schedule-row
                 span Wednesday
-                span 09:30 - 13:30
+                span 09:30 AM - 10:30 PM
+              .profile-person__schedule-row
+                span Monday
+                span 09:30 AM - 10:30 PM
+              .profile-person__schedule-row
+                span Tuesday
+                span 09:30 AM - 10:30 PM
+              .profile-person__schedule-row
+                span Wednesday
+                span 09:30 AM - 10:30 PM
             //end profile-person__schedule
           //end profile-person-row__left
 
