--- a/src/style/pages/_profile-person.scss
+++ b/src/style/pages/_profile-person.scss
@@ -186,8 +186,12 @@ a.profile-person__contacts-link {
     font-size: 16px;
     font-weight: 400;
     display: block;
-    width: 50%;
+    //width: 50%;
+    &:first-child{
+      width: 40%;
+    }
     &:last-child {
+      width: 60%;
       text-align: right;
     }
   }
