--- a/src/pug/_template.pug
+++ b/src/pug/_template.pug
@@ -25,6 +25,7 @@ html(lang="en")
     link(rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Nunito:wght@300;400&display=swap")
     link(rel='stylesheet' href='assets/css/foundation.css')
     link(rel='stylesheet' href='assets/css/app.css')
+    link(rel='stylesheet' href='assets/css/app2.css')
 
     // begin custom browsers color
     //meta(name='theme-color', content='#ffbd06')
