--- a/src/pug/pages/search-results.pug
+++ b/src/pug/pages/search-results.pug
@@ -6,12 +6,12 @@ block variables
   - var ogtitle     = 'Search Results | Tempeak'
   - var ogimage     = 'assets/img/social.jpg'
 
-  - var pageHeaderTitle = 'Search Results'
+  - var pageHeaderTitle = 'Results'
 
 block content
   .main-wrap
     include ../sections/header-profile
-    include ../sections/page-header-arr
+    include ../sections/page-header-arr-filter
 
     //begin content
     main.main.results
