--- a/src/style2/_2022-login.scss
+++ b/src/style2/_2022-login.scss
@@ -39,3 +39,13 @@
 .button--signup {
   margin-top: 8px;
 }
+
+.page-header--center-all {
+  .page-header__title {
+    width: 100%;
+    margin-right: auto;
+    margin-bottom: 16px;
+    margin-left: auto !important;
+    text-align: center;
+  }
+}
