did mobile version

--- a/src/style2/app2.scss
+++ b/src/style2/app2.scss
@@ -1,9 +1,9 @@
 @import "../style/core/variables";
 @import "../style/core/mixins";
 
-@import 'search-result';
+@import 'files/search-result';
 
-@import "2022-pricing";
-@import "2022-footer-lg-with-apps";
-@import "2022-login";
-@import "2022-form";
+@import "files/2022-pricing";
+@import "files/2022-footer-lg-with-apps";
+@import "files/2022-login";
+@import "files/2022-form";
