--- a/src/style2/files/_2022-pricing.scss
+++ b/src/style2/files/_2022-pricing.scss
@@ -1,6 +1,6 @@
 .pricing-2022__item {
   border-radius: 0;
-  background-image: url('../img/price-orange.png');
+  background-image: url('../../img/price-orange.png');
   background-repeat: no-repeat;
   background-position: 50% 50%;
   background-size: contain;
@@ -44,7 +44,7 @@
 }
 
 .pricing-2022__item--free {
-  background-image: url('../img/price-green.png');
+  background-image: url('../../img/price-green.png');
 }
 
 .pricing-2022__free {
