--- a/src/style2/files/_2022-login.scss
+++ b/src/style2/files/_2022-login.scss
@@ -20,7 +20,7 @@
   margin-top: 16px;
   margin-bottom: 8px;
   background-color: #db4437;
-  background-image: url('../img/google.svg');
+  background-image: url('../../img/google.svg');
   background-repeat: no-repeat;
   background-position: 15px 50%;
 
@@ -31,7 +31,7 @@
 
 .button--facebook {
   margin-bottom: 32px;
-  background-image: url('../img/facebook.svg');
+  background-image: url('../../img/facebook.svg');
   background-repeat: no-repeat;
   background-position: 20px 50%;
 }
