--- a/src/pug/elements/person-card-03.pug
+++ b/src/pug/elements/person-card-03.pug
@@ -53,7 +53,7 @@
     //end person-card__info
 
   .person-card__button
-    button.button.button--waiting
+    button.button.button--waiting.popup-open(data-popup="popup-review")
       span Waiting
       +svg('sand-glass')
 //end person-card
