update all npm packets

--- a/src/style2/app2.scss
+++ b/src/style2/app2.scss
@@ -8,6 +8,7 @@
 @import "pages/2022-footer-lg-with-apps";
 @import "pages/2022-login";
 @import "pages/2022-form";
+@import "pages/2022-request-person";
 
 //sections
 @import "sections/2022-popup";
