--- a/src/pug/elements/slider-range-single-list.pug
+++ b/src/pug/elements/slider-range-single-list.pug
@@ -10,7 +10,7 @@ mixin slider-range-single(text)
 
 //begin slider-range-list
 ul.slider-range-single__list.slider-rangesingle-list
-  +slider-range-single('is more than 48 hours')
-  +slider-range-single('is between 48 and 12 hours')
-  +slider-range-single('is less than 12 hours')
+  +slider-range-single('Is more than 48 hours')
+  +slider-range-single('Is between 48 and 12 hours')
+  +slider-range-single('Is less than 12 hours')
 //end slider-range-list
