--- a/src/style2/pages/_2022-edit-profile.scss
+++ b/src/style2/pages/_2022-edit-profile.scss
@@ -21,12 +21,162 @@
   .slider-range__list {
     margin-bottom: 0;
   }
+
+  .sign-up-lg-form__salary {
+    padding-top: 8px;
+  }
+
+  .slider-range-single {
+    margin-bottom: 16px;
+    padding: 24px;
+    border: 1px solid #d4d4d4;
+    border-radius: 24px;
+    background-color: #f7f7f7;
+
+    @include min(768) {
+      padding: 30px 24px;
+    }
+
+    &:last-child {
+      margin-bottom: 0 !important;
+    }
+  }
+
+  .slider-range-single__list {
+    margin-bottom: 0;
+  }
+
+  .slider-range-single__text {
+    font-size: 16px;
+    font-weight: 400;
+    text-align: center;
+    color: #000;
+
+    @include min(768) {
+      font-size: 20px;
+      line-height: 27px;
+      text-align: left;
+    }
+  }
+
+  .slider-range-single__input-wrap {
+    top: auto;
+    right: 24px;
+    bottom: 24px;
+    width: 80px;
+    height: 32px;
+    padding: 2px 20px 0 20px;
+    border: 1px solid #d4d4d4;
+    border-radius: 20px;
+
+    @include min(920) {
+      top: 28px;
+      width: 116px;
+      height: 38px;
+    }
+  }
+
+  .slider-range-single__input {
+    border-bottom: none;
+    background-color: transparent;
+  }
+
+  .slider-range-single__scale {
+    @include min(920) {
+      margin-top: 32px;
+    }
+
+    &.minval {
+      .ui-state-default,
+      .ui-widget-content .ui-state-default {
+        left: 0 !important;
+        transform: translate(8px, 4px) !important;
+      }
+    }
+  }
+
+  .slider-range-single {
+    .ui-widget.ui-widget-content {
+      overflow: hidden;
+      width: calc(100% - 96px);
+      height: 32px;
+      border-radius: 16px;
+
+      @include min(920) {
+        width: 100%;
+        height: 24px;
+        border-radius: 12px;
+      }
+    }
+
+    .ui-slider-horizontal .ui-slider-range {
+      height: 32px;
+      pointer-events: none;
+      border-radius: 16px;
+
+      @include min(920) {
+        height: 24px;
+        border-radius: 12px;
+      }
+    }
+
+    .ui-state-default,
+    .ui-widget-content .ui-state-default {
+      width: 32px;
+      height: 32px;
+      cursor: grab;
+      transform: translate(-12px, 4px);
+      border-radius: 50%;
+
+      @include min(920) {
+        width: 24px;
+        height: 24px;
+        transform: translate(-12px, 4px);
+      }
+    }
+  }
+
+  .slider-range-single:nth-child(1) {
+    .ui-slider-horizontal .ui-slider-range,
+    .ui-state-default,
+    .ui-widget-content .ui-state-default {
+      background-color: #7ebf34;
+    }
+  }
+
+  .slider-range-single:nth-child(2) {
+    .ui-slider-horizontal .ui-slider-range,
+    .ui-state-default,
+    .ui-widget-content .ui-state-default {
+      background-color: #ffbd06;
+    }
+  }
+
+  .slider-range-single:nth-child(3) {
+    .ui-slider-horizontal .ui-slider-range,
+    .ui-state-default,
+    .ui-widget-content .ui-state-default {
+      background-color: #d84b1f;
+    }
+  }
 }
 
 .edit-b-profile__form-row {
   @include min(768) {
     display: flex;
     justify-content: space-between;
+  }
+
+  &:last-child {
+    .form-group {
+      @include min(768) {
+        margin-bottom: 0;
+      }
+
+      &:last-child {
+        margin-bottom: 0;
+      }
+    }
   }
 
   .form-group {
@@ -115,6 +265,12 @@
       margin-bottom: 0;
     }
   }
+}
+
+.edit-b-profile__item--center {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
 .edit-b-profile__item--logo {
