--- a/src/style2/app2.scss
+++ b/src/style2/app2.scss
@@ -14,3 +14,6 @@
 
 //sections
 @import "sections/2022-popup";
+@import "sections/2022-index-top";
+@import "sections/2022-index-about";
+@import "sections/2022-index-download";
