--- a/src/style2/app2.scss
+++ b/src/style2/app2.scss
@@ -11,6 +11,8 @@
 @import "pages/2022-form";
 @import "pages/2022-request-person";
 @import "pages/2022-edit-profile";
+@import "pages/2022-results";
+
 
 //sections
 @import "sections/2022-popup";
