--- a/src/style2/pages/_2022-edit-profile.scss
+++ b/src/style2/pages/_2022-edit-profile.scss
@@ -428,7 +428,7 @@
 
 .edit-b-profile__btns--right {
   display: flex;
-  flex-direction: column;
+  flex-direction: column-reverse;
 
   @include min(768) {
     flex-direction: row;
