--- a/src/style2/sections/_2022-index-about.scss
+++ b/src/style2/sections/_2022-index-about.scss
@@ -1,5 +1,10 @@
 .index-about {
   position: relative;
+  @include max(980) {
+    max-width: 600px;
+    margin-left: auto;
+    margin-right: auto;
+  }
 
   .container-inn {
     max-width: 966px;
