--- a/src/pug/pages/2022-results.pug
+++ b/src/pug/pages/2022-results.pug
@@ -17,6 +17,8 @@ block content
     main.main.results
       .container.container-inn.container-inn--sm
         include ../elements/2022-person-card-02
+        include ../elements/2022-person-card-02
+        include ../elements/2022-person-card-02
     //end content
 
     include ../sections/footer
